--- a/pom.xml
+++ b/pom.xml
@@ -71,5 +71,16 @@
             <url>http://47.106.140.189:9081/repository/ai-qiyue-releases/</url>
         </repository>
     </distributionManagement>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <executable>true</executable>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
